[gd_scene load_steps=5 format=3 uid="uid://btwj4hlivo6j7"]

[ext_resource type="Script" path="res://scenes/customer_spawner/customer_spawner.gd" id="1_yge1b"]
[ext_resource type="PackedScene" uid="uid://drw0865onnspm" path="res://scenes/entity/entity.tscn" id="2_0ncbb"]
[ext_resource type="Texture2D" uid="uid://ddsi55skwv1rc" path="res://graphics/sprites/characters/spr_character_customer_1.png" id="3_m1546"]
[ext_resource type="Texture2D" uid="uid://dfojwmqt2ma1v" path="res://graphics/sprites/characters/spr_character_customer_2.png" id="4_ge3ho"]

[node name="CustomerSpawner" type="Node2D"]
script = ExtResource("1_yge1b")
customer_scene = ExtResource("2_0ncbb")
customer_textures = Array[Texture2D]([ExtResource("3_m1546"), ExtResource("4_ge3ho")])

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="EnterPoint" type="Marker2D" parent="."]
position = Vector2(8, 0)

[node name="LeavePoint" type="Marker2D" parent="."]
position = Vector2(-8, 0)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
